# forked_simple_python_project

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  setup.py  simple_python_project.py
calculator/: calculator.py
calculator/utils/: helpers.py
src/: calculator.py
